@@ -46,7 +46,6 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
     static double quot1, quot2;
     static int iejac;
     static int iecon;
-    static int arret;
     static double fnewt;
     static int nstep;
     static double tolst;
@@ -55,6 +54,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
     static int istore;
     static int startn;
     static double uround;
+	int radcor_ret = 0;
 /* ---------------------------------------------------------- */
 /*     NUMERICAL SOLUTION OF A STIFF (OR DIFFERENTIAL ALGEBRAIC) */
 /*     SYSTEM OF FIRST 0RDER ORDINARY DIFFERENTIAL EQUATIONS */
@@ -245,6 +245,8 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
 /* ----------------------------------------------------------------------- */
 
 /*     OUTPUT PARAMETERS */
+/*     RETURN FLAGS, SEE HEADER FILE*/
+
 /*     ----------------- */
 /*     X           X-VALUE FOR WHICH THE SOLUTION HAS BEEN COMPUTED */
 /*                 (AFTER SUCCESSFUL RETURN X=XEND). */
@@ -253,13 +255,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
 
 /*     H           PREDICTED STEP SIZE OF THE LAST ACCEPTED STEP */
 
-/*     IDID        REPORTS ON SUCCESSFULNESS UPON RETURN: */
-/*                   IDID= 1  COMPUTATION SUCCESSFUL, */
-/*                   IDID= 2  COMPUT. SUCCESSFUL (INTERRUPTED BY SOLOUT) */
-/*                   IDID=-1  INPUT IS NOT CONSISTENT, */
-/*                   IDID=-2  LARGER NMAX IS NEEDED, */
-/*                   IDID=-3  STEP SIZE BECOMES TOO SMALL, */
-/*                   IDID=-4  MATRIX IS REPEATEDLY SINGULAR. */
+/*     IDID        IF RETURN == RADAU_SUCCESS_SOLOUT_INTERRUPT, IDID = RETURN FLAG FROM SOLOUT CALLBACK */
 
 /*   IWORK(14)  NFCN    NUMBER OF FUNCTION EVALUATIONS (THOSE FOR NUMERICAL */
 /*                      EVALUATION OF THE JACOBIAN ARE NOT COUNTED) */
@@ -295,7 +291,6 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
     nrejct = 0;
     ndec = 0;
     nsol = 0;
-    arret = FALSE_;
 	/* -------- UROUND   SMALLEST NUMBER SATISFYING 1.0D0+UROUND>1.0D0 */
     if (work[1] == 0.) {
 		uround = 1e-16;
@@ -303,7 +298,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
 		uround = work[1];
 		if (uround <= 1e-19 || uround >= 1.) {
 			printf(" COEFFICIENTS HAVE 20 DIGITS, UROUND= \t %e \n", uround);
-			arret = TRUE_;
+			return RADAU_ERROR_INCONSISTENT_INPUT;
 		}
     }
 	/* -------- CHECK AND CHANGE THE TOLERANCES */
@@ -311,7 +306,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
     if (*itol == 0) {
 		if (atol[1] <= 0. || rtol[1] <= uround * 10.) {
 			printf(" TOLERANCES ARE TOO SMALL \n");
-			arret = TRUE_;
+			return RADAU_ERROR_INCONSISTENT_INPUT;
 		} else {
 			quot = atol[1] / rtol[1];
 			rtol[1] = pow(rtol[1], expm) * .1;
@@ -321,7 +316,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
 		for (i = 1; i <= n; ++i) {
 			if (atol[i] <= 0. || rtol[i] <= uround * 10.) {
 				printf("TOLERANCES (%i) ARE TOO SMALL \n", i);
-				arret = TRUE_;
+				return RADAU_ERROR_INCONSISTENT_INPUT;
 			} else {
 				quot = atol[i] / rtol[i];
 				rtol[i] = pow(rtol[i], expm) * .1;
@@ -336,7 +331,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
 		nmax = iwork[2];
 		if (nmax <= 0) {
 			printf("WRONG INPUT IWORK(2)= %i \n", nmax);
-			arret = TRUE_;
+			return RADAU_ERROR_INCONSISTENT_INPUT;
 		}
     }
 	/* -------- NIT, MAXIMAL NUMBER OF NEWTON ITERATIONS */
@@ -346,7 +341,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
 		nit = iwork[3];
 		if (nit <= 0) {
 			printf("CURIOUS INPUT IWORK(3)= %i \n", nit);
-			arret = TRUE_;
+			return RADAU_ERROR_INCONSISTENT_INPUT;
 		}
     }
 	/* -------- STARTN SWITCH FOR STARTING VALUES OF NEWTON ITERATIONS */
@@ -368,7 +363,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
 		safe = work[2];
 		if (safe <= .001 || safe >= 1.) {
 			printf("CURIOUS INPUT FOR WORK(2)= %f \n", safe);
-			arret = TRUE_;
+			return RADAU_ERROR_INCONSISTENT_INPUT;
 		}
     }
 	/* ------ THET, DECIDES WHETHER THE JACOBIAN SHOULD BE RECOMPUTED; */
@@ -378,18 +373,18 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
 		thet = work[3];
 		if (thet >= 1.) {
 			printf("CURIOUS INPUT FOR WORK(3)= %f \n", thet);
-			arret = TRUE_;
+			return RADAU_ERROR_INCONSISTENT_INPUT;
 		}
     }
 	/* --- FNEWT, STOPPING CRITERION FOR NEWTON'S METHOD, USUALLY CHOSEN <1. */
     tolst = rtol[1];
     if (work[4] == 0.) {
-		fnewt = max(uround * 10 / tolst, min(.03, pow(tolst, c_b54)));
+		fnewt = radau_max(uround * 10 / tolst, radau_min(.03, pow(tolst, c_b54)));
     } else {
 		fnewt = work[4];
 		if (fnewt <= uround / tolst) {
 			printf("CURIOUS INPUT FOR WORK(4)= %f \n", fnewt);
-			arret = TRUE_;
+			return RADAU_ERROR_INCONSISTENT_INPUT;
 		}
     }
 	/* --- QUOT1 AND QUOT2: IF QUOT1 < HNEW/HOLD < QUOT2, STEP SIZE = CONST. */
@@ -405,7 +400,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
     }
     if (quot1 > 1. || quot2 < 1.) {
 		printf("CURIOUS INPUT FOR WORK(5, 6)= %f \t %f \n", quot1, quot2);
-		arret = TRUE_;
+		return RADAU_ERROR_INCONSISTENT_INPUT;
     }
 	/* -------- MAXIMAL STEP SIZE */
     if (work[7] == 0.) {
@@ -426,11 +421,11 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
     }
     if (facl < 1. || facr > 1.) {
 		printf("CURIOUS INPUT FOR WORK(8, 9)= %f \t %f \n", facl, facr);
-		arret = TRUE_;
+		return RADAU_ERROR_INCONSISTENT_INPUT;
     }
 	if (sparse_LU && !(*ijac)){
 		printf("CURIOUS INPUT; ANALYTICAL JACOBIAN DISABLED, IJAC = %i, WHICH IS REQUIRED FOR SPARSE SOLVER\n", *ijac);
-		arret = TRUE_;
+		return RADAU_ERROR_INCONSISTENT_INPUT;
 	}
 	/* ------- PREPARE THE ENTRY-POINTS FOR THE ARRAYS IN WORK ----- */
 	iewerr = 21;
@@ -451,7 +446,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
     istore = iee2i + n * n - 1;
     if (istore > *lwork) {
 		printf("INSUFFICIENT STORAGE FOR WORK, MIN. LWORK= %i\n", istore);
-		arret = TRUE_;
+		return RADAU_ERROR_INCONSISTENT_INPUT;
     }
 	/* ------- ENTRY POINTS FOR int WORKSPACE ----- */
     ieip1 = 21;
@@ -460,26 +455,23 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
     istore = ieip2 + n - 1;
     if (istore > *liwork) {
 		printf("INSUFF. STORAGE FOR IWORK, MIN. LIWORK= %i\n", istore);
-		arret = TRUE_;
+		return RADAU_ERROR_INCONSISTENT_INPUT;
     }
-	/* ------ WHEN A FAIL HAS OCCURED, WE RETURN WITH IDID=-1 */
-    if (arret) {
-		*idid = -1;
-		return 0;
-    }
+	/* POSSIBLE ADDITIONAL RETURN FLAG */
+	*idid = 0;
 	/* -------- CALL TO CORE INTEGRATOR ------------ */
-    radcor_(n, (FP_CB_f)fcn, fcn_PY, x, &y[1], xend, &hmax, h__, &rtol[1], &atol[1], 
-		itol, (FP_CB_jac)jac, (FP_CB_jac_sparse) jac_sparse, jac_PY, ijac,
-		(FP_CB_solout)solout, solout_PY, iout, idid, &nmax, &uround, &safe, &thet, &fnewt,
-	    &quot1, &quot2, &nit, sparse_LU, &startn,
-	    &pred, &facl, &facr,
-	    &work[iez1], &work[iez2], &work[iez3], &work[iey0],
-		&work[iescal], &work[ief1], &work[ief2], &work[ief3], &work[iejac],
-		&work[iee1], &work[iee2r], &work[iee2i],
-	    &iwork[ieip1], &iwork[ieip2], &work[iecon], &nfcn,
-	    &njac, &nstep, &naccpt, &nrejct, &ndec, &nsol,
-		&work[iewerr], /* entry point for werr */
-		radau_slu_aux);
+    radcor_ret = radcor_(n, (FP_CB_f)fcn, fcn_PY, x, &y[1], xend, &hmax, h__, &rtol[1], &atol[1], 
+						 itol, (FP_CB_jac)jac, (FP_CB_jac_sparse) jac_sparse, jac_PY, ijac,
+						 (FP_CB_solout)solout, solout_PY, iout, idid, &nmax, &uround, &safe, &thet, &fnewt,
+						 &quot1, &quot2, &nit, sparse_LU, &startn,
+						 &pred, &facl, &facr,
+						 &work[iez1], &work[iez2], &work[iez3], &work[iey0],
+						 &work[iescal], &work[ief1], &work[ief2], &work[ief3], &work[iejac],
+						 &work[iee1], &work[iee2r], &work[iee2i],
+						 &iwork[ieip1], &iwork[ieip2], &work[iecon], &nfcn,
+						 &njac, &nstep, &naccpt, &nrejct, &ndec, &nsol,
+						 &work[iewerr], /* entry point for werr */
+						 radau_slu_aux);
     iwork[14] = nfcn;
     iwork[15] = njac;
     iwork[16] = nstep;
@@ -500,7 +492,7 @@ int radau5_c(int n, FP_CB_f fcn, void* fcn_PY,
 			atol[i] = rtol[i] * quot;
 		}
     }
-    return 0;
+	return radcor_ret;
 } /* radau5_ */
 
 
@@ -624,11 +616,11 @@ int radcor_(int n, FP_CB_f fcn, void* fcn_PY,
     ti32 = 2.5719269498556054292;
     ti33 = -.59603920482822492497;
     posneg = copysign(1., *xend - *x);
-    hmaxn = min(abs(*hmax), abs(*xend - *x));
-    if (abs(*h__) <= *uround * 10.) {
+    hmaxn = radau_min(radau5_abs(*hmax), radau5_abs(*xend - *x));
+    if (radau5_abs(*h__) <= *uround * 10.) {
 		*h__ = 1e-6;
     }
-    *h__ = min(abs(*h__), hmaxn);
+    *h__ = radau_min(radau5_abs(*h__), hmaxn);
     *h__ = copysign(*h__, posneg);
     hold = *h__;
     reject = FALSE_;
@@ -645,7 +637,6 @@ int radcor_(int n, FP_CB_f fcn, void* fcn_PY,
     nunexpect = 0;
     xold = *x;
     if (*iout != 0) {
-		irtrn = 1;
 		nrsol = 1;
 		xosol = xold;
 		conra5_1.xsol = *x;
@@ -655,8 +646,10 @@ int radcor_(int n, FP_CB_f fcn, void* fcn_PY,
 		}
 		nsolu = n;
 		conra5_1.hsol = hold;
+
+		irtrn = 0;
 		(*solout)(&nrsol, &xosol, &conra5_1.xsol, &y[1], &cont[1], &werr[1], &
-			lrc, &nsolu, &irtrn, solout_PY);
+				  lrc, &nsolu, &irtrn, solout_PY);
 		if (irtrn < 0) {
 			goto L179;
 		}
@@ -665,11 +658,11 @@ int radcor_(int n, FP_CB_f fcn, void* fcn_PY,
     n3 = n * 3;
     if (*itol == 0) {
 		for (i = 1; i <= n; ++i) {
-			scal[i] = atol[1] + rtol[1] * abs(y[i]);
+			scal[i] = atol[1] + rtol[1] * radau5_abs(y[i]);
 		}
     } else {
 		for (i = 1; i <= n; ++i) {
-			scal[i] = atol[i] + rtol[i] * abs(y[i]);
+			scal[i] = atol[i] + rtol[i] * radau5_abs(y[i]);
 		}
     }
     hhfac = *h__;
@@ -689,7 +682,7 @@ L10:
 		/* --- JACOBIAN IS FULL */
 		for (i = 1; i <= n; ++i) {
 			ysafe = y[i];
-			delt = sqrt(*uround * max(1e-5, abs(ysafe)));
+			delt = sqrt(*uround * radau_max(1e-5, radau5_abs(ysafe)));
 			y[i] = ysafe + delt;
 			ier = (*fcn)(n, x, &y[1], &cont[1], fcn_PY);
 			if (ier != RADAU_CALLBACK_OK) {
@@ -757,7 +750,7 @@ L30:
     if (*nstep > *nmax) {
 		goto L178;
     }
-    if (abs(*h__) * .1 <= abs(*x) * *uround) {
+    if (radau5_abs(*h__) * .1 <= radau5_abs(*x) * *uround) {
 		goto L177;
     }
     xph = *x + *h__;
@@ -796,8 +789,8 @@ L30:
 	/*  LOOP FOR THE SIMPLIFIED NEWTON ITERATION */
 	/* *** *** *** *** *** *** *** */
     newt = 0;
-    faccon = pow(max(faccon,*uround), c_b114);
-    theta = abs(*thet);
+    faccon = pow(radau_max(faccon,*uround), c_b114);
+    theta = radau5_abs(*thet);
 	/* --- NEWTON */
 L40:
     if (newt >= *nit) {
@@ -868,7 +861,7 @@ L40:
 			faccon = theta / (1. - theta);
 			dyth = faccon * dyno * pow(theta, *nit - 1 - newt) / *fnewt;
 			if (dyth >= 1.) {
-				qnewt = max(1e-4, min(20., dyth));
+				qnewt = radau_max(1e-4, radau_min(20., dyth));
 				hhfac = pow(qnewt, -1. / (*nit + 4. - 1 - newt)) * .8;
 				*h__ = hhfac * *h__;
 				reject = TRUE_;
@@ -882,7 +875,7 @@ L40:
 			goto L78;
 		}
     }
-    dynold = max(dyno, *uround);
+    dynold = radau_max(dyno, *uround);
     for (i = 1; i <= n; ++i) {
 		f1i = f1[i] + z1[i];
 		f2i = f2[i] + z2[i];
@@ -908,8 +901,8 @@ L40:
 	}
 	/* --- COMPUTATION OF HNEW */
 	/* --- WE REQUIRE .2<=HNEW/H<=8. */
-    fac = min(*safe, cfac / (newt + (*nit << 1)));
-    quot = max(*facr ,min(*facl, pow(err, c_b116) / fac));
+    fac = radau_min(*safe, cfac / (newt + (*nit << 1)));
+    quot = radau_max(*facr ,radau_min(*facl, pow(err, c_b116) / fac));
     hnew = *h__ / quot;
 	/* *** *** *** *** *** *** *** */
 	/*  IS THE ERROR SMALL ENOUGH ? */
@@ -922,12 +915,12 @@ L40:
 			/*       --- PREDICTIVE CONTROLLER OF GUSTAFSSON */
 			if (*naccpt > 1) {
 				facgus = hacc / *h__ * pow(err * err / erracc, c_b116) / *safe;
-				facgus = max(*facr, min(*facl, facgus));
-				quot = max(quot,facgus);
+				facgus = radau_max(*facr, radau_min(*facl, facgus));
+				quot = radau_max(quot,facgus);
 				hnew = *h__ / quot;
 			}
 			hacc = *h__;
-			erracc = max(.01, err);
+			erracc = radau_max(.01, err);
 		}
 		xold = *x;
 		hold = *h__;
@@ -945,11 +938,11 @@ L40:
 		}
 		if (*itol == 0) {
 			for (i = 1; i <= n; ++i) {
-				scal[i] = atol[1] + rtol[1] * abs(y[i]);
+				scal[i] = atol[1] + rtol[1] * radau5_abs(y[i]);
 			}
 		} else {
 			for (i = 1; i <= n; ++i) {
-				scal[i] = atol[i] + rtol[i] * abs(y[i]);
+				scal[i] = atol[i] + rtol[i] * radau5_abs(y[i]);
 			}
 		}
 		if (*iout != 0) {
@@ -961,8 +954,10 @@ L40:
 			}
 			nsolu = n;
 			conra5_1.hsol = hold;
-			(*solout)(&nrsol, &xosol, &conra5_1.xsol, &y[1], &cont[1], &werr[1],
-			 		  &lrc, &nsolu, &irtrn, solout_PY);
+
+			irtrn = 0;
+			(*solout)(&nrsol, &xosol, &conra5_1.xsol, &y[1], &cont[1], &werr[1], &
+								lrc, &nsolu, &irtrn, solout_PY);
 			if (irtrn < 0) {
 				goto L179;
 			}
@@ -970,16 +965,15 @@ L40:
 		caljac = FALSE_;
 		if (last) {
 			*h__ = hopt;
-			*idid = 1;
-			goto L181;
+			return RADAU_SUCCESS;
 		}
 		(*fcn)(n, x, &y[1], &y0[1], fcn_PY);
 		++(*nfcn);
-		hnew = posneg * min(abs(hnew), hmaxn);
+		hnew = posneg * radau_min(radau5_abs(hnew), hmaxn);
 		hopt = hnew;
-		hopt = min(*h__,hnew);
+		hopt = radau_min(*h__,hnew);
 		if (reject) {
-			hnew = posneg * min(abs(hnew), abs(*h__));
+			hnew = posneg * radau_min(radau5_abs(hnew), radau5_abs(*h__));
 		}
 		reject = FALSE_;
 		if ((*x + hnew / *quot1 - *xend) * posneg >= 0.) {
@@ -1037,8 +1031,7 @@ L78:
 L79:
 	if (ier < RADAU_CALLBACK_ERROR_INVALID_NNZ){
 		printf("FAILURE IN JACOBIAN EVALUATIONS, NNZ TOO SMALL, SPECIFIED NNZ: %i, ACTUAL: %i \n", radau_slu_aux->nnz, -(ier - RADAU_CALLBACK_ERROR_INVALID_NNZ));
-		*idid = -6;
-		goto L181;
+		return RADAU_ERROR_NNZ_TOO_SMALL;
 	}
 
 	switch(ier){
@@ -1069,43 +1062,36 @@ L79:
 L175:
 	printf("EXIT OF RADAU5 AT X = %e \n", *x);
 	printf("REPEATEDLY UNEXPECTED STEP REJECTIONS\n");
-    *idid = -5;
-	goto L181;
+	return RADAU_ERROR_REP_STEP_REJECT;
 /* --- FAIL EXIT, REPEATED SINGULAR JACOBIAN*/
 L176:
 	printf("EXIT OF RADAU5 AT X = %e \n", *x);
 	printf("MATRIX IS REPEATEDLY SINGULAR IER= %i\n", ier);
-    *idid = -4;
-	goto L181;
+	return RADAU_ERROR_JAC_SINGULAR;
 /* --- FAIL EXIT, STEP SIZE TOO SMALL*/
 L177:
 	printf("EXIT OF RADAU5 AT X = %e \n", *x);
 	printf("STEP SIZE TOO SMALL, H= %e\n", *h__);
-    *idid = -3;
-	goto L181;
+	return RADAU_ERROR_STEPSIZE_TOO_SMALL;
 /* --- FAIL EXIT, NMAX EXCEEDED*/
 L178:
 	printf("EXIT OF RADAU5 AT X = %e \n", *x);
 	printf("MORE THAN NMAX = %i STEPS ARE NEEDED\n", *nmax);
-    *idid = -2;
-	goto L181;
+	return RADAU_ERROR_NMAX_TOO_SMALL;
 /* --- FAILURE EXIT, ERROR IN SPARSE JACOBIAN CALLBACK*/
 L182:
 	printf("EXIT OF RADAU5 AT X = %e \n", *x);
 	printf("JACOBIAN GIVEN IN WRONG FORMAT, REQUIRED SPARSE FORMAT: CSC\n");
-	*idid = -7;
-	goto L181;
+	return RADAU_ERROR_WRONG_SPARSE_JAC_FORMAT;
 L183:
 	printf("EXIT OF RADAU5 AT X = %e \n", *x);
 	printf("UNEXPECTED MALLOC FAILURE\n");
-	*idid = -9;
-	goto L181;
+	return RADAU_ERROR_UNEXPECTED_MALLOC_FAILURE;
 /* --- FAIL EXIT, UNEXPECTED SUPERLU FAILURE*/
 L184:
 	printf("EXIT OF RADAU5 AT X = %e \n", *x);
 	printf("UNEXPECTED FAILURE OF SUPERLU FUNCTION CALL, ier = %i \n", ier);
-	*idid = -8;
-	goto L181;
+	return RADAU_ERROR_UNEXPECTED_SUPERLU_FAILURE;
 /* --- FAIL EXIT, OTHER SUPERLU FAILURE*/
 L185:
 	if (ier < 0){ /* incorrect input to function call */
@@ -1116,23 +1102,17 @@ L185:
 	}else{ /* memory allocation failure */
 		printf("EXIT OF RADAU5 AT X = %e \n", *x);
 		printf("SUPERLU MEMORY ALLOCATION FAILURE, NUMBER OF BYTES ALLOCATED AT POINT OF FAILURE: %i.\n", ier - n);
-		*idid = -9;
-		goto L181;
+		return RADAU_ERROR_UNEXPECTED_MALLOC_FAILURE;
 	}
 /* --- FAIL EXIT, UNRECOVERABLE EXCEPTION IN FCN OR JAC CALLBACK*/
 L186:
 	printf("EXIT OF RADAU5 AT X = %e \n", *x);
 	printf("UNRECOVERABLE EXCEPTION ENCOUNTERED IN PROBLEM CALLBACK\n");
-	*idid = -10;
-	return 0;
+	return RADAU_ERROR_UNRECOVERABLE_CALLBACK_ERROR;
 /* --- EXIT CAUSED BY SOLOUT */
 L179:
-    *idid = 2;
-	goto L181;
-
-/* --- EXIT OF RADCOR */
-L181:
-	return 0;
+    *idid = irtrn; /* return from solout callback */
+	return RADAU_SUCCESS_SOLOUT_INTERRUPT;
 } /* radcor_ */
 
 
@@ -1197,7 +1177,7 @@ int dec_(int n, double *a, int *ip, int *ier)
 		kp1 = k + 1;
 		m = k;
 		for (i = kp1; i <= n; ++i) {
-			if (abs(a[i + k * n]) > abs(a[m + k * n])) {
+			if (radau5_abs(a[i + k * n]) > radau5_abs(a[m + k * n])) {
 			m = i;
 			}
 		}
@@ -1340,7 +1320,7 @@ int decc_(int n, double *ar, double *ai, int *ip, int *ier)
 		kp1 = k + 1;
 		m = k;
 		for (i = kp1; i <= n; ++i) {
-			if (abs(ar[i + k * n]) + abs(ai[i + k * n]) > abs(ar[m + k * n]) + abs(ai[m + k * n])) {
+			if (radau5_abs(ar[i + k * n]) + radau5_abs(ai[i + k * n]) > radau5_abs(ar[m + k * n]) + radau5_abs(ai[m + k * n])) {
 				m = i;
 			}
 		}
@@ -1356,7 +1336,7 @@ int decc_(int n, double *ar, double *ai, int *ip, int *ier)
 		ar[k + k * n] = tr;
 		ai[k + k * n] = ti;
 L20:
-		if (abs(tr) + abs(ti) == 0.) {
+		if (radau5_abs(tr) + radau5_abs(ti) == 0.) {
 			goto L80;
 		}
 		den = tr * tr + ti * ti;
@@ -1375,7 +1355,7 @@ L20:
 			ai[m + j * n] = ai[k + j * n];
 			ar[k + j * n] = tr;
 			ai[k + j * n] = ti;
-			if (abs(tr) + abs(ti) == 0.) {
+			if (radau5_abs(tr) + radau5_abs(ti) == 0.) {
 				goto L48;
 			}
 			if (ti == 0.) {
@@ -1408,7 +1388,7 @@ L48:
     }
 L70:
     k = n;
-    if (abs(ar[n + n * n]) + abs(ai[n + n * n]) == 0.) {
+    if (radau5_abs(ar[n + n * n]) + radau5_abs(ai[n + n * n]) == 0.) {
 		goto L80;
     }
     return 0;
@@ -1608,7 +1588,7 @@ int estrad_(int n, double *h__,
 		werr[i] = cont[i] / scal[i];
 		*err += werr[i] * werr[i];
     }
-    *err = max(sqrt(*err / n), 1e-10);
+    *err = radau_max(sqrt(*err / n), 1e-10);
 
     if (*err < 1.) {
 		return 0;
@@ -1637,7 +1617,7 @@ int estrad_(int n, double *h__,
 			werr[i] = cont[i] / scal[i];
 			*err += werr[i] * werr[i];
 		}
-		*err = max(sqrt(*err / n), 1e-10);
+		*err = radau_max(sqrt(*err / n), 1e-10);
     }
     return 0;
 } /* estrad_ */
